ObjectSerialization
===========================================

Version 1.0.15
-------------------------------------------
+ extended IObjectSerializer interface to support streams
+ added performance test for huge object
+ refactored adapter classes in performance tests

Version 1.0.14
-------------------------------------------
+ simplified IObjectSerializer interface

Version 1.0.13
-------------------------------------------
+ added ProtoBuf-net serializer for performance comparison
+ annotated TestObjects with ProtoBuf attributes
+ refactored PerformanceMonitor and added HtmlResultPresenter
+ updated internal comments for serializers
+ modified TypeSerializerBuilder to not use additional variable for deserialized object

Version 1.0.12
-------------------------------------------
+ optimized TypeSerializerFactory to cache type information

Version 1.0.11
-------------------------------------------
+ optimized struct and class members serialization
+ added more performance monitor cases

Version 1.0.10
-------------------------------------------
+ added serialization performance project to compare serialization times/serialized data size for various object graphs and serializer implementations
+ optimized GenericSerializerFactory to cache loaded types
+ optimized serialization by reduced objects casting into one helper variable

Version 1.0.9
-------------------------------------------
+ added support for collection serialization (any implementing ICollection)

Version 1.0.8
-------------------------------------------
+ added support for struct serialization
+ modified BuildContext to display generated serialization code for classes on console if project is compiled in DEBUG mode

Version 1.0.7
-------------------------------------------
+ added support for null string serialization

Version 1.0.6
-------------------------------------------
+ added support for array serialization at root and class member level

Version 1.0.5